# django-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: Default.yaml  build-and-push-image.yaml  test.yaml
apps/: test_dupa.py
example/: settings.py
kito/: asgi.py  settings.py  urls.py  wsgi.py
