[tool.poetry]
name = "kito"
version = "0.1.0"
description = ""
authors = ["Aleksander Pucher <pucher.aleksander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7.1.2"
djangorestframework-stubs = "^1.5.0"
django-stubs = "^1.10.1"
pytest-django = "^4.5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
